# MultiDoc-RAG-Reasoner

./: .gitattributes  .gitignore  AML_Project.ipynb  Makefile  README.md  app.py  pyproject.toml  requirements.txt
evaluation_outputs/: e1_query_type.json  e2_prompt_sanity.json  e3_baseline_vs_reasoning.json  e4_lost_in_middle.json  evaluation_chunks.json
examples/: build_UI.py  build_index.py  evaluation.py  export_evaluation_chunks.py  test_llm_client.py  test_prompts.py  test_reasoning.py
src/llm/: __init__.py  llm_api_groq.py  llm_client.py  prompts.py  reasoning.py
tests/: conftest.py  test_llm_client.py  test_prompts.py  test_reasoning.py
