[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multidoc-rag-reasoner"
version = "0.1.0"
description = "Document-aware RAG reasoning with query classification and structured prompting"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that call external APIs (deselect with '-m \"not integration\"')",
]
